<resources>
    <string name="app_name">Momentia</string>

    <string name="register" translatable="false">Register</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="upload">Upload</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="upload_story">Upload Story</string>
    <string name="language">Language</string>

...

    <string name="invalid_email_format">Invalid email format</string>
    <string name="password_length_error">Password must be at least 8 characters</string>

    <string name="story_list">Story List</string>
    <string name="logout_dialog_message">Are you sure you want to logout?</string>
    <string name="dialog_positive_button">OK</string>
    <string name="dialog_negative_button">CANCEL</string>

    <string name="appwidget_text">Latest Story</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">Momentia Widget</string>
    <string name="empty_widget_text">Empty</string>
...
